[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/Pics/Tier_None.png" type="Texture" id=1]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/SingleSynergyDisplayer.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[node name="SingleSynergyDisplayer" type="MarginContainer"]
margin_right = 37.0
margin_bottom = 14.0
size_flags_vertical = 4
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 37.0
margin_bottom = 14.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TierIconPanel" type="MarginContainer" parent="HBoxContainer"]
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TierIcon" type="TextureRect" parent="HBoxContainer/TierIconPanel"]
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="SpecialMarginer" type="MarginContainer" parent="HBoxContainer/TierIconPanel"]
margin_left = 3.0
margin_right = 10.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/margin_top = 2
custom_constants/margin_left = 1

[node name="TierNumberLabel" type="Label" parent="HBoxContainer/TierIconPanel/SpecialMarginer"]
margin_left = 1.0
margin_top = 2.0
margin_right = 7.0
margin_bottom = 14.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "I"

[node name="SynergyIconPanel" type="MarginContainer" parent="HBoxContainer"]
margin_left = 14.0
margin_right = 28.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SynergyIcon" type="TextureRect" parent="HBoxContainer/SynergyIconPanel"]
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="SynergyInfoLabelPanel" type="MarginContainer" parent="HBoxContainer"]
margin_left = 28.0
margin_right = 37.0
margin_bottom = 14.0
mouse_filter = 2
custom_constants/margin_left = 5
custom_constants/margin_bottom = -2

[node name="SynergyInfoLabel" type="Label" parent="HBoxContainer/SynergyInfoLabelPanel"]
margin_left = 5.0
margin_top = 3.0
margin_right = 9.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 2 )
text = "t"
valign = 1

[connection signal="gui_input" from="." to="." method="_on_SingleSynergyDisplayer_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_SingleSynergyDisplayer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SingleSynergyDisplayer_mouse_exited"]
